<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Charlie Kelly\'s Rat Trackers</string>

    <!-- Strings related to Facebook -->
    <string name="facebook_app_id">1373564639436475</string>
    <string name="fb_login_protocol_scheme">fb1373564639436475</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password" tools:keep="@string/prompt_password">Password (optional)</string>
    <string name="action_sign_in" tools:keep="@string/action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email" tools:keep="@string/error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password" tools:keep="@string/error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password" tools:keep="@string/error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required" tools:keep="@string/error_field_required">This field is required</string>
    <string name="permission_rationale" tools:keep="@string/permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_welcome_screen" tools:keep="@string/title_activity_welcome_screen">WelcomeScreen</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_detailed_rat_data_display" tools:keep="@string/title_activity_detailed_rat_data_display">DetailedRatDataDisplayActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_dates" tools:keep="@string/title_activity_map_dates">MapDatesActivity</string>
    <!--String resources-->
    <string name="Accept">Accept</string>
    <string name="Cancel">Cancel</string>
    <string name="Back">Back</string>
    <string name="EndDate">End Date</string>
    <string name="StartDate">Start Date</string>
    <string name="Load">Load</string>
    <string name="Graph">Graph</string>
    <string name="Password">Password</string>
    <string name="Signin">Sign in</string>
    <string name="RatReports">Rat Reports</string>
    <string name="Map">Map</string>
    <string name="RatTracker">Rat Tracker</string>
    <string name="Logout">Logout</string>
    <string name="Instances">Instances</string>
    <string name="Name">Name</string>
    <string name="Admin">Admin</string>
    <string name="User">User</string>
    <string name="REGISTER">Register</string>
    <string name="CANCEL">Cancel</string>
    <string name="AddReport">Add Report</string>
    <string name="SearchID">Search ID</string>
    <string name="Y_Axis">Y Axis: Number of Rat Sightings</string>
    <string name="X_Axis">X Axis: Sightings per Month (ascending chronologically)</string>
    <string name="TextView">TextView</string>
    <string name="Login">Login</string>
    <string name="welcome">Welcome to Charlie Kelly\'s Rat Tracker</string>
    <string name="image">Text for Image</string>
</resources>
